<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="top"
            android:scaleType="fitXY"
            android:src="@drawable/header_wave" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Text_Title"
                    android:textAlignment="textEnd"
                    android:textColor="@color/fourd"
                    android:textSize="25sp"></TextView>


                <!--Username-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:paddingHorizontal="20sp"
                    android:text="@string/Text_FieldsUser"
                    android:textSize="25sp"></TextView>

                <EditText
                    android:id="@+id/usernameEtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_txt_main"
                    android:hint="@string/Text_FieldsUser"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="8dp"></EditText>

                <!-- Error -->
                <TextView
                    android:id="@+id/txtError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:fontFamily="serif"
                    android:paddingHorizontal="5sp"
                    android:paddingVertical="5sp"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"></TextView>

                <!--Password-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:paddingStart="20sp"
                    android:text="@string/Text_FieldsPassword"
                    android:textSize="25sp">
                </TextView>

                <EditText
                    android:id="@+id/passwordEtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@drawable/rounded_edit_txt_main"
                    android:hint="@string/Text_FieldsPassword"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="8dp"></EditText>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:backgroundTint="@color/fourd"
                    android:text="@string/Text_btnRegister"></Button>

                <TextView
                    android:id="@+id/Text_reLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/fourd"
                    android:textSize="25sp"></TextView>

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="bottom"
            android:scaleType="fitXY"
            android:src="@drawable/footer_wave" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>