<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".Activity_Profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/header_wave"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20sp"
            android:orientation="vertical"
            android:paddingTop="20sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text_Title_Act2"
                android:textStyle="bold"
                android:textSize="25sp">
            </TextView>

            <TextView
                android:id="@+id/textUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text_FieldsUser"

                android:textSize="17sp">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:theme="@style/flex_layout"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/rounded_cards_profile">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Text_Alarm"
                            android:textAlignment="center">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="This alarm turn on in 10s">
                        </TextView>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Press me">
                        </Button>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/rounded_cards_profile">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Text_Alarm"
                            android:textAlignment="textStart">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="This alarm turn on in 10s"
                            >

                        </TextView>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Press me">
                        </Button>

                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>